fix: accordion colors for better visibility

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -97,22 +97,29 @@ main {
     }
 }
 
+.accordion {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+}
+
+.active, .accordion:hover {
+    background-color: #ccc;
+}
+
 .panel {
-    display: none;
+    padding: 0 18px;
+    background-color: white;
+    max-height: 0;
     overflow: hidden;
-    transition: max-height 0.3s ease-out;
-}
-
-.accordion.active {
-    background-color: #444;
-}
-
-.accordion::after {
-    content: '\002B';
-    color: white;
-    font-weight: bold;
-    float: right;
-    margin-left: 5px;
+    transition: max-height 0.2s ease-out;
 }
 
 .active::after {
